2005-07-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* po/POTFILES.in:
	Correct wrong file paths.

2005-07-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/notifier/notifier-impl.c:
	Take height of taskbar into consideration and prevent taskbar from being
	covered by the popup notifier.

	* src/notifier/working_area.c:
	This piece of code is got from Guification, a plug-in for Gaim.

	* src/view/termview.cpp:
	Rewrite the code used to launch web browser.
	Remove unnecessary dependency on class CAppConfig.

	* src/view/telnetcon.cpp:
	Disable popup notifier if the user don't want to use it.

	* src/mainframe.cpp:
	Set web browser for CTermView according to user settings.

	* src/generalprefpage.cpp,
	src/appconfig.cpp,
	src/pcmanx_pure_gtk2.cpp:
	Add some preference options for popup notifier.

2005-07-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/notifier/notifier-impl.c, 
	src/view/telnetcon.cpp:
	+ Automatically hide msg popup disappear on timeout.
	+ Click on the popup window can raise the main frame window and switch 
	  to the connection which received this message.
	  Timeout can be disabled on mouse over.

	* src/view/termview.cpp (CTermView::ReclacCharDemension):
	Recelculate m_CharW & m_CharH after fonts changed.

	* src/mainframe.cpp:
	Add "Apply to opened pages" option in font selection dialog..

2005-07-22  Jim Huang  <jserv@kaffe.org>

	* src/core/Makefile.am: Add missing file.

2005-07-22  Jim Huang  <jserv@kaffe.org>

	* src/core/widget.cpp,
	src/core/font.cpp,
	src/core/site.cpp,
	src/core/caret.cpp,
	src/core/termdata.cpp,
	src/core/termdata.h,
	src/core/font.h,
	src/core/widget.h,
	src/core/stringutil.cpp,
	src/core/site.h,
	src/core/view.h,
	src/core/caret.h,
	src/core/stringutil.h,
	src/core/view.cpp:
	Move core implementation from $(top_srcdir)/src to 
	$(top_srcdir)/src/core, so that both standalone program and plugin
	could use the shared library.

	* src/view/termview.cpp,
	src/view/telnetview.cpp,
	src/view/termview.h,